# gakachu-backend

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  default.nix  docker-compose.yml  package.xml  requirements.txt  setup.py
assets/: index.html
launch/: start_server.launch
src/: main.py
src/frontend/: main.py
