<?xml version="1.0"?>
<package format="2">
  <name>gakachu_backend</name>
  <version>0.1.0</version>
  <description>GakaChu backend</description>
  <author email="vadim.razorq@gmail.com">Vadim Manaenko</author>
  <maintainer email="vadim.razorq@gmail.com">Vadim Manaenko</maintainer>
  <maintainer email="makar5321@gmail.com">Makar Chernyaev</maintainer>
  <license>Apache-2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robonomics_msgs</build_depend>
  <build_depend>robonomics_liability</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>robonomics_msgs</build_export_depend>
  <build_export_depend>robonomics_liability</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>robonomics_msgs</exec_depend>
  <exec_depend>robonomics_liability</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
